2008-01-30  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: output # for properties transferring
	  ownership

2008-01-30  Jürg Billeter  <j@bitron.ch>

	* vala/valacreationmethod.vala: default cname should be _init instead
	  of _new for creation methods in structs

2008-01-30  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: don't output overridden properties

2008-01-30  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am, vapi/WebKitGtk.deps, vapi/WebKitGtk.vapi,
	  vapi/packages/WebKitGtk/: add WebKit bindings

2008-01-29  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala, vapi/glib-2.0.vapi: bind GString
	  as GLib.StringBuilder to avoid confusion between string and String

2008-01-29  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala: fix crash on invalid code, fixes bug 512306

2008-01-29  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: enhance GError binding

2008-01-29  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/libsoup-2.2/: fix SoupDataBuffer binding

	* vapi/libsoup-2.2.vapi: regenerated

2008-01-29  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: support transfer_ownership attribute
	  for function parameters

	* vapi/packages/libsoup-2.2/: fix soup_session_queue_message binding

	* vapi/libsoup-2.2.vapi: regenerated

2008-01-28  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: support [NoWrapper] attribute for
	  virtual methods

2008-01-28  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: remove unnecessary if statement

2008-01-27  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorinvocationexpression.vala,
	  gobject/valaccodegeneratormemberaccess.vala: fix struct pointer
	  member access

	* tests/Makefile.am, tests/pointers.vala, tests/pointers.exp: test
	  struct pointers

2008-01-27  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix critical when using normal member
	  access on pointers
