@@ -1,5 +1,10 @@
 2008-01-30  Jürg Billeter  <j@bitron.ch>
 
+	* vala/valasemanticanalyzer.vala: report error when trying to add
+	  instance fields to interfaces, fixes bug 513152
+
+2008-01-30  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valainterfacewriter.vala: output # for properties transferring
 	  ownership
 
